fixed so that the results are displayed bellow the search bar, not behind

--- a/detecht-frontend/src/app/search-bar/search-bar.component.scss
+++ b/detecht-frontend/src/app/search-bar/search-bar.component.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   font-family: Verdana;
 
-  margin-bottom: -75px;
+  margin-bottom: 20px;
 
   form {
     width: auto;
