--- a/detecht-frontend/src/app/search-page/search-hits/search-hits.component.scss
+++ b/detecht-frontend/src/app/search-page/search-hits/search-hits.component.scss
@@ -36,3 +36,7 @@
   }
 }
 
+#number-of-hits {
+  margin-bottom: 10px;
+}
+
